--- a/pages/css/login.css
+++ b/pages/css/login.css
@@ -47,6 +47,7 @@ h3 {
     background-position: 95%;
     background-repeat: no-repeat;
     box-shadow: 1px 2px 10px 0px rgba(0,0,0,0.3);
+    text-align: 10%;
     border: none;
     border-radius: 2px;
     position: relative;
