--- a/pages/css/main.css
+++ b/pages/css/main.css
@@ -13,10 +13,36 @@ body {
     width: 40%;
 }
 
-.booth {
-    width: 400px;
-    background-color: #ccc;
-    border: 10px solid #ddd;
-    margin: 0 autor;
-    
+.b {
+    display: inline-block;
+    margin: 0px 10px 0 60px;
+    font-size: 15px;
+    font-family:sans-serif;
+    line-height: 1.8;
+    appearance: none;
+    box-shadow: none;
+    border: none;
+    border-radius: 10px;
+    background-color: #3C7A89;
+    box-shadow: 1px 2px 10px 0px rgba(0,0,0,0.3);
+    color:aliceblue;
+}
+
+.b:hover {
+    opacity: 0.8;
+}
+
+.camera {
+    position: relative;
+    margin-left: 10%;
+    float: left;
+}
+
+.myCanvas {
+    float: right;
+}
+
+.flex {
+    align-content: center;
+    margin-left: 11%;
 }
